<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Activity.TelaPrincipal">

 <View
     android:id="@+id/containerUser"
     android:layout_width="150dp"
     android:layout_height="150dp"
     android:layout_marginTop="30dp"
     android:background="@drawable/container_user"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintTop_toTopOf="parent"/>

    <ImageView app:layoutDescription="@drawable/user1"
        android:id="@+id/imagem_User"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/user1"
        app:layout_constraintBottom_toBottomOf="@id/containerUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <View
        android:id="@+id/containerComponents_123_principal"
        style="@style/ContainerComponents"
        android:layout_width="347dp"
        android:layout_height="339dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerUser" />

   <EditText
       android:id="@+id/edit_nome_telaprincipal"
       style="@style/Edit_Text"
       android:layout_marginTop="36dp"
       android:drawableStart="@drawable/ic__person"
       android:hint="@string/text_hint_nome"
       android:inputType="text"
       android:textColorHint="@color/teal_200"
       app:layout_constraintEnd_toEndOf="@id/containerComponents_123_principal"
       app:layout_constraintStart_toStartOf="@id/containerComponents_123_principal"
       app:layout_constraintTop_toBottomOf="@id/containerUser" />

   <EditText
       android:id="@+id/edit_email_telaprincipal"
       style="@style/Edit_Text"
       android:drawableStart="@drawable/ic_email55"
       android:hint="@string/text_hint_email"
       android:textColorHint="@color/teal_200"
       android:inputType="textEmailAddress"
       app:layout_constraintEnd_toEndOf="@id/containerComponents_123_principal"
       app:layout_constraintStart_toStartOf="@id/containerComponents_123_principal"
       app:layout_constraintTop_toBottomOf="@id/edit_nome_telaprincipal" />


   <EditText
        android:id="@+id/edit_senha_telaprincipal"
        style="@style/Edit_Text"
        android:drawableStart="@drawable/ic_eye_verde"
        android:hint="@string/text_hint_senha"
       android:textColorHint="@color/teal_200"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="@id/containerComponents_123_principal"
        app:layout_constraintStart_toStartOf="@id/containerComponents_123_principal"
        app:layout_constraintTop_toBottomOf="@id/edit_email_telaprincipal" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_Deslogar_perfil"
        style="@style/button"
        android:text="@string/text_deslogar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_senha_telaprincipal" />


    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerComponents_123_principal" />

    <TextView
        android:id="@+id/text_tela_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/text_atualizar"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressbar" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/button"
        android:layout_width="117dp"
        android:layout_height="61dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_sair"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_tela_cadastro" />


</androidx.constraintlayout.widget.ConstraintLayout>