<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Activity.CameraStudio">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="32dp">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="capturarImagem"
            android:text="@string/capturar_imagem" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="visualizarImagem"
            android:text="@string/visualizar_imagem" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_escolher_opcao_camera"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="EscolherOpcao"
            android:text="@string/escolher_opçoes" />

        <ImageView
            android:id="@+id/logo_camera"
            android:layout_width="wrap_content"
            android:layout_height="149dp"
            android:layout_margin="30dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_escolher_opcao_camera"
            app:srcCompat="@drawable/logocamera"


            />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>